# CSC1106_Group

./: -d  .env  Cargo.toml  README.md  bugtracker.db
_curl/: command
src/: auth.rs  db.rs  lib.rs  logger.rs  main.rs  models.rs  state.rs
src/routes/: assign.rs  bugs.rs  login.rs  mod.rs  projects.rs  ui.rs
static/: assign.html  bug_detail.html  bugs.html  dashboard.html  login.html  projects.html  style.css  users.html
templates/: assign_bug.html  assign_form.html  assign_result.html  assign_success.html  bug_form.htm;  bug_list.html  index.html  layout.html  login.html  project_page.html
